add `id` to projects as page nav anchors

--- a/src/pages/index/Project.astro
+++ b/src/pages/index/Project.astro
@@ -29,7 +29,7 @@ try {
   <ul>
     {
       projectDetailsList.map((it) => (
-        <li class="mb-16 last-of-type:mb-0">
+        <li id={it.id} class="mb-16 last-of-type:mb-0">
           <ProjectDetails {...it} />
         </li>
       ))
