set scroll-smooth

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,7 +6,7 @@ const title: string = "Astro Theme Resume Minimalist — Jianqiang Du"
 const description: string = "An open-sourced minimal resume site template built with Astro."
 ---
 
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta name="generator" content={Astro.generator} />
