set scroll padding top on index route

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,3 +14,9 @@ import Project from "./index/Project.astro"
     <Project class="mt-36" />
   </main>
 </BaseLayout>
+
+<style>
+  html {
+    --at-apply: scroll-pt-19;
+  }
+</style>
