add dark classes

--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -12,7 +12,7 @@ import AppLink from "./AppLink.astro"
         by
       </span>
       <span class="inline-flex">
-        <AppLink class="text-gray-800 capitalize" url="https://yurikong.github.io" showSuffixIcon>
+        <AppLink class="text-gray-800 capitalize dark:text-gray-400" url="https://yurikong.github.io" showSuffixIcon>
           jianqiang du
         </AppLink>
         .
@@ -23,7 +23,7 @@ import AppLink from "./AppLink.astro"
     <div>
       <span>Released under</span>
       <span class="inline-flex">
-        <AppLink class="text-gray-800" url="https://opensource.org/license/mit" showSuffixIcon>
+        <AppLink class="text-gray-800 dark:text-gray-400" url="https://opensource.org/license/mit" showSuffixIcon>
           The MIT License
         </AppLink>
         .
@@ -34,7 +34,7 @@ import AppLink from "./AppLink.astro"
     <div>
       <span>Credits —</span>
       <span class="inline-flex">
-        <AppLink class="text-gray-800 capitalize" url="https://brittanychiang.com" showSuffixIcon>
+        <AppLink class="text-gray-800 capitalize dark:text-gray-400" url="https://brittanychiang.com" showSuffixIcon>
           brittany chiang
         </AppLink>
         .
@@ -45,7 +45,9 @@ import AppLink from "./AppLink.astro"
     <div>
       <span>Site built with</span>
       <span class="inline-fle">
-        <AppLink class="text-gray-800 capitalize" url="https://astro.build" showSuffixIcon>Astro</AppLink>
+        <AppLink class="text-gray-800 capitalize dark:text-gray-400" url="https://astro.build" showSuffixIcon>
+          Astro
+        </AppLink>
         .
       </span>
     </div>
