--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -15,16 +15,20 @@ const socials: ISocial[] = [
 
 <section>
   <!-- Name -->
-  <h1 class="text-(4xl gray-800) font-medium tracking-tight capitalize">jianqiang du</h1>
+  <h1 class="text-(4xl gray-800) font-medium tracking-tight capitalize dark:text-gray-300">jianqiang du</h1>
 
   <!-- Job Title -->
-  <div class="mt-4 text-(lg gray-800) font-medium tracking-tight capitalize">Software Developer</div>
+  <div class="mt-4 text-(lg gray-800) font-medium tracking-tight capitalize dark:text-gray-300">Software Developer</div>
 
   <!-- Description -->
   <p class="mt-16 text-base">
     <span>I am the creator of</span>
     <span class="inline-flex">
-      <AppLink class="text-gray-800" url="https://github.com/yurikong/astro-theme-resume-minimalist" showSuffixIcon>
+      <AppLink
+        class="text-gray-800 dark:text-gray-300"
+        url="https://github.com/yurikong/astro-theme-resume-minimalist"
+        showSuffixIcon
+      >
         Astro Theme Resume Minimalist
       </AppLink>
       .
