--- a/src/pages/index/Project.astro
+++ b/src/pages/index/Project.astro
@@ -22,7 +22,7 @@ try {
 <!-- Projects -->
 <section class={className}>
   <h2
-    class="sticky top-0 z-20 mb-4 bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6"
+    class="sticky top-0 z-20 mb-4 bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6 dark:(bg-transparent text-gray-300 backdrop-blur)"
   >
     projects
   </h2>
@@ -38,7 +38,7 @@ try {
 
   <!-- View All Projects -->
   <AppLink
-    class="mt-24 block text-gray-800 font-semibold capitalize"
+    class="mt-24 block text-gray-800 font-semibold capitalize dark:text-gray-300"
     url="/project"
     showSuffixIcon
     suffixIconClassName="i-ri:arrow-right-line"
