--- a/src/pages/index/ProjectDetails.astro
+++ b/src/pages/index/ProjectDetails.astro
@@ -37,10 +37,10 @@ const selectedHighlights: IProjectHighlight[] = highlights.filter((it) => it.val
 ---
 
 <!-- Ongoing Years -->
-<YearRange class="py-2 text-(xs gray-400) tracking-wide uppercase" startYear={startYear} endYear={endYear} />
+<YearRange class="py-2 text-xs tracking-wide uppercase" startYear={startYear} endYear={endYear} />
 
 <!-- Name -->
-<AppLink class="block text-gray-800 font-medium" url={url} showSuffixIcon={!!url}>
+<AppLink class="block text-gray-800 font-medium dark:text-gray-300" url={url} showSuffixIcon={!!url}>
   {name}
 </AppLink>
 
