--- a/src/pages/index/Work.astro
+++ b/src/pages/index/Work.astro
@@ -21,7 +21,7 @@ try {
 
 <section class={className}>
   <h2
-    class="sticky top-0 z-20 mb-4 bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6"
+    class="sticky top-0 z-20 mb-4 bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6 dark:(bg-transparent text-gray-300 backdrop-blur)"
   >
     work
   </h2>
@@ -36,5 +36,7 @@ try {
   </ul>
 
   <!-- View Full Resume -->
-  <AppLink class="mt-24 block text-gray-800 font-semibold capitalize" showSuffixIcon>view full resume</AppLink>
+  <AppLink class="mt-24 block text-gray-800 font-semibold capitalize dark:text-gray-300" showSuffixIcon>
+    view full resume
+  </AppLink>
 </section>
