--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,7 +16,7 @@ const description: string = "An open-sourced minimal resume site template built 
   <Inter />
 
   <body class="relative bg-gray-100 text-gray-500 leading-relaxed tabular-nums antialiased dark:bg-gray-900">
-    <div class="px-6 py-12">
+    <div class="px-6">
       <slot />
     </div>
 
