--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -14,6 +14,12 @@ const socials: ISocial[] = [
 ---
 
 <section>
+  <header
+    class="text-md sticky top-0 z-20 mb-12 bg-gray-100 px-6 py-5 text-(gray-800) tracking-widest lowercase -mx-6 dark:(bg-transparent text-gray-300 backdrop-blur)"
+  >
+    <AppLink url="/">resume</AppLink>
+  </header>
+
   <!-- Name -->
   <h1 class="text-(4xl gray-800) font-medium tracking-tight capitalize dark:text-gray-300">jianqiang du</h1>
 
@@ -21,7 +27,7 @@ const socials: ISocial[] = [
   <div class="mt-4 text-(lg gray-800) font-medium tracking-tight capitalize dark:text-gray-300">Software Developer</div>
 
   <!-- Description -->
-  <p class="mt-16 text-base">
+  <p class="mt-16 leading-normal">
     <span>I am the creator of</span>
     <span class="inline-flex">
       <AppLink
