change h2 to header

--- a/src/pages/index/Project.astro
+++ b/src/pages/index/Project.astro
@@ -21,11 +21,11 @@ try {
 
 <!-- Projects -->
 <section class={className}>
-  <h2
+  <header
     class="sticky top-0 z-20 mb-4 bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6 dark:(bg-transparent text-gray-300 backdrop-blur)"
   >
     projects
-  </h2>
+  </header>
   <ul>
     {
       projectDetailsList.map((it) => (
