--- a/src/pages/index/Education.astro
+++ b/src/pages/index/Education.astro
@@ -32,11 +32,11 @@ const educationDetailsList: IEducation[] = (
 ---
 
 <section class={className}>
-  <h2
+  <header
     class="sticky top-0 z-20 mb-4 bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6 dark:(bg-transparent text-gray-300 backdrop-blur)"
   >
     education
-  </h2>
+  </header>
   <ul>
     {
       educationDetailsList.map((it) => (
