--- a/src/pages/index/Work.astro
+++ b/src/pages/index/Work.astro
@@ -20,11 +20,11 @@ try {
 ---
 
 <section class={className}>
-  <h2
+  <header
     class="sticky top-0 z-20 mb-4 bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6 dark:(bg-transparent text-gray-300 backdrop-blur)"
   >
     work
-  </h2>
+  </header>
   <ul>
     {
       workDetailsList.map((it) => (
