--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -15,7 +15,7 @@ const socials: ISocial[] = [
 
 <section>
   <header
-    class="text-md sticky top-0 z-20 mb-12 bg-gray-100 px-6 py-5 text-(gray-800) tracking-widest lowercase -mx-6 dark:(bg-transparent text-gray-300 backdrop-blur)"
+    class="text-md sticky top-0 z-20 mb-12 bg-gray-100 px-6 py-5 text-(gray-800) tracking-widest lowercase -mx-6 dark:(bg-transparent text-gray-300 backdrop-blur-lg)"
   >
     <AppLink url="/">resume</AppLink>
   </header>
