--- a/src/pages/index/Project.astro
+++ b/src/pages/index/Project.astro
@@ -22,7 +22,7 @@ try {
 <!-- Projects -->
 <section class={className}>
   <header
-    class="sticky top-0 z-20 mb-4 bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6 dark:(bg-transparent text-gray-300 backdrop-blur)"
+    class="sticky top-0 z-20 mb-4 bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6 dark:(bg-transparent text-gray-300 backdrop-blur-lg)"
   >
     projects
   </header>
