fix project route padding-top

--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -16,51 +16,58 @@ try {
 ---
 
 <BaseLayout>
-  <AppLink class="mb-2 block leading-tight lowercase" url="/" showPrefixIcon prefixIconClassName="i-ri:arrow-left-line">
-    back
-  </AppLink>
-  <h1 class="text-(4xl gray-800) font-medium tracking-tight capitalize">all projects</h1>
+  <div class="py-5">
+    <AppLink
+      class="mb-2 block leading-tight lowercase"
+      url="/"
+      showPrefixIcon
+      prefixIconClassName="i-ri:arrow-left-line"
+    >
+      back
+    </AppLink>
+    <h1 class="text-(4xl gray-800) font-medium tracking-tight capitalize">all projects</h1>
 
-  <table class="mt-12 text-left">
-    <thead>
-      <tr class="sticky top-0 z-20 bg-gray-100 capitalize">
-        <th>Year</th>
-        <th>Project</th>
-        <!-- <th>Made at</th> -->
-        <!-- <th>Technologies Used</th> -->
-        <!-- <th>Link</th> -->
-      </tr>
-    </thead>
+    <table class="mt-12 text-left">
+      <thead>
+        <tr class="sticky top-0 z-20 bg-gray-100 capitalize">
+          <th>Year</th>
+          <th>Project</th>
+          <!-- <th>Made at</th> -->
+          <!-- <th>Technologies Used</th> -->
+          <!-- <th>Link</th> -->
+        </tr>
+      </thead>
 
-    <tbody>
-      {
-        projects.map((it) => (
-          <tr class="border-(b gray-800/10) last:border-none">
-            {/* Year */}
-            <td class="py-4 pr-4 align-top text-sm leading-snug capitalize">
-              <YearRange startYear={it.startYear} endYear={it.endYear} />
-            </td>
+      <tbody>
+        {
+          projects.map((it) => (
+            <tr class="border-(b gray-800/10) last:border-none">
+              {/* Year */}
+              <td class="py-4 pr-4 align-top text-sm leading-snug capitalize">
+                <YearRange startYear={it.startYear} endYear={it.endYear} />
+              </td>
 
-            {/* Project */}
-            <td class="py-4 pr-4 align-top text-gray-800 font-medium leading-snug">
-              <AppLink url={it.link?.url} showSuffixIcon={!!it.link}>
-                {it.name}
-              </AppLink>
-            </td>
+              {/* Project */}
+              <td class="py-4 pr-4 align-top text-gray-800 font-medium leading-snug">
+                <AppLink url={it.link?.url} showSuffixIcon={!!it.link}>
+                  {it.name}
+                </AppLink>
+              </td>
 
-            {/* Made at */}
-            {/* <td>{it.madeAt}</td> */}
+              {/* Made at */}
+              {/* <td>{it.madeAt}</td> */}
 
-            {/* Technologies Used */}
-            {/* <td>{it.technologiesUsed}</td> */}
+              {/* Technologies Used */}
+              {/* <td>{it.technologiesUsed}</td> */}
 
-            {/* Link */}
-            {/* <td>{it.link}</td> */}
-          </tr>
-        ))
-      }
-    </tbody>
-  </table>
+              {/* Link */}
+              {/* <td>{it.link}</td> */}
+            </tr>
+          ))
+        }
+      </tbody>
+    </table>
+  </div>
 </BaseLayout>
 
 <style>
