--- a/src/components/ToggleColorScheme.astro
+++ b/src/components/ToggleColorScheme.astro
@@ -5,7 +5,7 @@ interface Props {
 const { class: className } = Astro.props
 ---
 
-<toggle-color-scheme class="flex items-center justify-center" class:list={[className]} type="button">
+<toggle-color-scheme class:list={["flex", "items-center", "justify-center", className]} type="button">
   <i></i>
 </toggle-color-scheme>
 
