--- a/src/pages/index/EducationDetails.astro
+++ b/src/pages/index/EducationDetails.astro
@@ -8,18 +8,22 @@ const { university, universityHomepage, degree, major, GPA, startYear, endYear }
 ---
 
 <!-- Attended Years -->
-<YearRange class="py-2 text-xs tracking-wide uppercase" startYear={startYear} endYear={endYear} />
+<YearRange class:list={["text-xs", "tracking-wide", "uppercase", "py-2"]} startYear={startYear} endYear={endYear} />
 
 <!-- University Name -->
-<AppLink class="block text-gray-800 font-medium dark:text-gray-300" url={universityHomepage} showSuffixIcon>
+<AppLink
+  class:list={["block", "font-medium", "text-gray-800", "dark:text-gray-300"]}
+  url={universityHomepage}
+  showSuffixIcon
+>
   {university}
 </AppLink>
 
 <!-- Major & Degree -->
-<div class="flex text-(sm gray-700) leading-relaxed dark:text-gray-400">
+<div class:list={["flex", "text-sm", "leading-relaxed", "text-gray-700", "dark:text-gray-400"]}>
   {major}
   {!!degree && <span>, {degree}</span>}
 </div>
 
 <!-- GPA -->
-<div class="text-(sm gray-700) leading-relaxed dark:text-gray-400">GPA: {GPA}</div>
+<div class:list={["text-sm", "leading-relaxed", "text-gray-700", "dark:text-gray-400"]}>GPA: {GPA}</div>
