--- a/src/pages/index/Project.astro
+++ b/src/pages/index/Project.astro
@@ -22,14 +22,31 @@ try {
 <!-- Projects -->
 <section class={className}>
   <header
-    class="sticky top-0 z-20 mb-4 bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6 dark:(bg-transparent text-gray-300 backdrop-blur-lg)"
+    class:list={[
+      "sticky",
+      "top-0",
+      "z-20",
+      "px-6",
+      "py-5",
+      "mb-4",
+      "-mx-6",
+      "font-semibold",
+      "text-sm",
+      "tracking-widest",
+      "uppercase",
+      "text-gray-800",
+      "dark:text-gray-300",
+      "bg-gray-100",
+      "dark:bg-transparent",
+      "dark:backdrop-blur-lg",
+    ]}
   >
     projects
   </header>
   <ul>
     {
       projectDetailsList.map((it) => (
-        <li id={it.id} class="mb-12 last-of-type:mb-0">
+        <li id={it.id} class:list={["mb-12", "last-of-type:mb-0"]}>
           <ProjectDetails {...it} />
         </li>
       ))
@@ -38,7 +55,7 @@ try {
 
   <!-- View All Projects -->
   <AppLink
-    class="mt-12 block text-gray-800 font-semibold capitalize dark:text-gray-300"
+    class:list={["block", "mt-12", "font-semibold", "capitalize", "text-gray-800", "dark:text-gray-300"]}
     url="/project"
     showSuffixIcon
     suffixIconClassName="i-ri:arrow-right-line"
