remove sticky header backdrop-blur on dark mode

--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -32,8 +32,7 @@ const socials: ISocial[] = [
       "text-gray-800",
       "dark:text-gray-300",
       "bg-gray-100",
-      "dark:bg-transparent",
-      "dark:backdrop-blur-lg",
+      "dark:bg-gray-900",
     ]}
   >
     <AppLink url="/">resume</AppLink>
