--- a/src/pages/index/Work.astro
+++ b/src/pages/index/Work.astro
@@ -36,8 +36,7 @@ try {
       "text-gray-800",
       "dark:text-gray-300",
       "bg-gray-100",
-      "dark:bg-transparent",
-      "dark:backdrop-blur-lg",
+      "dark:bg-gray-900",
     ]}
   >
     work
