--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -15,11 +15,10 @@ const socials: ISocial[] = [
 ---
 
 <section>
+  <ToggleColorScheme class:list={["fixed", "top-5", "right-6", "z-21", "text-xl"]} />
+
   <header
     class:list={[
-      "flex",
-      "items-center",
-      "justify-between",
       "sticky",
       "top-0",
       "z-20",
@@ -27,6 +26,7 @@ const socials: ISocial[] = [
       "py-5",
       "mb-12",
       "-mx-6",
+      "leading-tight",
       "tracking-widest",
       "lowercase",
       "text-gray-800",
@@ -36,7 +36,6 @@ const socials: ISocial[] = [
     ]}
   >
     <AppLink url="/">resume</AppLink>
-    <ToggleColorScheme class="text-lg" />
   </header>
 
   <!-- Name -->
