--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "~layouts/BaseLayout.astro"
 import AppLink from "~components/AppLink.astro"
+import ToggleColorScheme from "~components/ToggleColorScheme.astro"
 import { getAllProjects } from "~api/project"
 import type { IProject } from "~types/project"
 import YearRange from "~components/YearRange.astro"
@@ -17,14 +18,18 @@ try {
 
 <BaseLayout>
   <div class="py-5">
-    <AppLink
-      class:list={["block", "mb-2", "leading-tight", "lowercase"]}
-      url="/"
-      showPrefixIcon
-      prefixIconClassName="i-ri:arrow-left-line"
-    >
-      back
-    </AppLink>
+    <div class:list={["flex", "items-center", "justify-between", "mb-2"]}>
+      <AppLink
+        class:list={["leading-tight", "lowercase"]}
+        url="/"
+        showPrefixIcon
+        prefixIconClassName="i-ri:arrow-left-line"
+      >
+        back
+      </AppLink>
+
+      <ToggleColorScheme class="text-xl" />
+    </div>
     <h1 class:list={["font-medium", "tracking-tight", "capitalize", "text-4xl", "text-gray-800"]}>all projects</h1>
 
     <table class:list={["text-left", "mt-12"]}>
